syntax = "proto3";

service PaxosService {
	rpc Prepare (PrepareRequest) returns (PromiseReply);
	rpc Accept (AcceptRequest) returns (AcceptedReply);
}

message PrepareRequest {
	int32 roundId = 1;
	int32 proposerId = 2;
	int32 epoch = 3;
}

message PromiseReply {
	repeated PaxosLease queue = 1;
	int32 readTimestamp = 2;
	int32 epoch = 3;
}

message AcceptRequest {
	int32 roundId = 1;
	repeated PaxosLease queue = 2;
	int32 epoch = 3;
}

message AcceptedReply {
	int32 value = 1;
	int32 writeTimestamp = 2;
	int32 epoch = 3;
}

// Repeated from another protobuf file, but its necessary :()
message PaxosLease {
	string TManagerId = 1;
	repeated string key = 2;
}